storage/innobase/ibuf/ibuf0ibuf.cc
@@ -4472,7 +4472,10 @@ ibuf_merge_or_delete_for_page(
 
 				fil_space_release(space);
 				if (UNIV_UNLIKELY(srv_shutdown_state)
-				    && !srv_fast_shutdown) {
+				    && !srv_fast_shutdown
+				    && (!block
+					|| btr_page_get_index_id(block->frame)
+					!= DICT_IBUF_ID_MIN + IBUF_SPACE_ID)) {
 					/* Prevent an infinite loop on slow
 					shutdown, in case the bitmap bits are
 					wrongly clear even though buffered
